# ist

./: .gitignore  build.gradle  gradle.properties
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ist.db
app/src/main/java/bd/edu/ist/: App.kt  CourseListComponent.kt  CreditComponent.kt  DepartmentActivity.kt  IstApplication.kt  MainActivity.kt  MainViewModel.kt  NavHost.kt  PagerComponent.kt  SemesterComponent.kt  StartActivityContent.kt  StartingActivity.kt  TabSections.kt
app/src/main/java/bd/edu/ist/bottombar/: BottomBar.kt  BottomNavItemLayout.kt  BottomNavLayout.kt  Scaffold.kt
app/src/main/java/bd/edu/ist/db/: CourseDao.kt  CourseEntity.kt  ISTDatabase.kt
app/src/main/java/bd/edu/ist/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/java/org/istbd/IST_Syllabus/: App.kt  CreditComponent.kt  IstApplication.kt  MainActivity.kt  MainViewModel.kt  NavHost.kt  PagerComponent.kt  SemesterComponent.kt  StartActivityContent.kt  StartingActivity.kt  TabSections.kt
app/src/main/java/org/istbd/IST_Syllabus/bottombar/: BottomBar.kt  BottomNavItemLayout.kt  BottomNavLayout.kt  Scaffold.kt
app/src/main/java/org/istbd/IST_Syllabus/db/: CourseDao.kt  CourseEntity.kt  ISTDatabase.kt
app/src/main/res/values/: color.xml  strings.xml  themes.xml
parser/: CMakeLists.txt  Parent.cpp  architecture.txt  bba.cpp  bba.py  bba.txt  civil.txt  computer-1-6.txt  computer-7.txt  cse.cpp  cse.py  cse.txt  ece.cpp  ece.py  ece.txt  electrical.txt  html-to-text.py  main.cpp  parser.py
(+4 files in other folders)
